--- a/templates/front_controller_bank/index.html.twig
+++ b/templates/front_controller_bank/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {% endblock %}
+{% block title %} SymfoBank {% endblock %}
 
 {% block body %}
-    <h1>Coucou</h1>
+    <h1 class="text-center">Contenu....</h1>
 {% endblock %}
