--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -7,14 +7,23 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Ouvrir un compte</a>
+            <a class="nav-link" aria-current="page" href="#">Ouvrir un compte</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"></a>
+            <a class="nav-link" href="#">Profil</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"></a>
-          </li>
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_logout') }}">Deconnexion</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_register') }}">S'enregistrer</a>
+              </li>
+            {% endif %}
         </ul>
       </div>
     </div>
