--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,7 +11,7 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
+            label: 'Mot de passe :'
         }) }}
     {{ form_end(registrationForm) }}
 
