--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Ouvrir un compte</a>
+            <a class="nav-link" aria-current="page" href="{{ path('newAccount') }}">Ouvrir un compte</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Profil</a>
