--- a/templates/bank/index.html.twig
+++ b/templates/bank/index.html.twig
@@ -3,5 +3,27 @@
 {% block title %} SymfoBank {% endblock %}
 
 {% block body %}
-    <h1 class="text-center">Contenu....</h1>
+    <h1 class="text-center">Vos comptes bancaires</h1>
+    <div class="container-fluid">
+        <div class="row">
+            {% for account in accounts %}
+                <div class="col-md-4 my-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Compte</h5>
+                            <p class="card-text">Type de compte : {{account.accountName}}</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">N° de compte : {{'FR' ~ account.accountNumber}}</li>
+                                <li class="list-group-item">Date d'ouverture : {{account.openDate | date('d/m/Y')}}</li>
+                                <li class="list-group-item">Solde du compte : {{account.accountAmount}}</li>
+                            </ul>
+                        </div>
+                        <div class="card-body">
+                            <a href="#" class="card-link btn btn-dark">Voir détails</a>
+                        </div>
+                    </div>
+                </div> 
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
