--- a/templates/bank/singleAccount.html.twig
+++ b/templates/bank/singleAccount.html.twig
@@ -16,11 +16,23 @@
                 <li class="list-group-item">Date d'ouverture : {{account.openDate | date('d/m/Y')}}</li>
                 <li class="list-group-item">Solde du compte : {{account.accountAmount}}</li>
             </ul>
+            <hr>
+            {% if (operation) %}
+            <h5 class="text-center">Dernière opération</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Type : {{operation.operationType}}</li>
+                <li class="list-group-item">Nom : {{operation.operationName}}</li>
+                <li class="list-group-item">Montant : {{operation.operationAmount}}</li>
+                <li class="list-group-item">Date : {{operation.operationDate | date('d/m/Y')}}</li>
+            </ul>
+            {% else %}
+            <h5 class="text-center">Pas d'opération sur ce compte</h5>
+            {% endif %}
         </div>
         <div class="card-footer">
-            <a href="#" class="card-link btn btn-dark mt-0">Crédit</a>
+            <a href="{{ path('creditOperation', {accountId:account.id}) }}" class="card-link btn btn-dark mt-0">Crédit</a>
             <a href="#" class="card-link btn btn-dark mt-0">Débit</a>
-            <a href="#" class="card-link btn btn-dark mt-0">Supprimer compte</a>
+            <a href="#" class="card-link btn btn-dark mt-0">Plus d'opérations</a>
         </div>
     </div>
 </div>
