--- a/templates/bank/lastOperation.html.twig
+++ b/templates/bank/lastOperation.html.twig
@@ -17,11 +17,20 @@
                 <li class="list-group-item">Solde du compte : {{account.accountAmount}}</li>
             </ul>
             <hr>
+            {% if (operations) %}
             <h5 class="text-center">Dernières opérations</h5>
+            {% for operation in operations %}
             <ul class="list-group list-group-flush">
-                <a href="{{ path('lastOperation', {accountId:account.id}) }}" class="card-link btn btn-dark mt-0">Voir opérations</a>
+                <li class="list-group-item">Type : {{operation.operationType}}</li>
+                <li class="list-group-item">Nom : {{operation.operationName}}</li>
+                <li class="list-group-item">Montant : {{operation.operationAmount}}</li>
+                <li class="list-group-item">Date : {{operation.operationDate | date('d/m/Y')}}</li>
             </ul>
             <hr>
+            {% endfor %}
+            {% else %}
+            <h5 class="text-center">Pas d'opération sur ce compte</h5>
+            {% endif %}
         </div>
         <div class="card-footer">
             <a href="{{ path('creditOperation', {accountId:account.id}) }}" class="card-link btn btn-dark mt-0">Crédit</a>
