--- a/templates/bank/singleAccount.html.twig
+++ b/templates/bank/singleAccount.html.twig
@@ -23,9 +23,9 @@
             </ul>
             <hr>
         </div>
-        <div class="card-footer">
+        <div class="card-footer text-center">
             <a href="{{ path('creditOperation', {accountId:account.id}) }}" class="card-link btn btn-dark mt-0">Crédit</a>
-            <a href="#" class="card-link btn btn-dark mt-0">Débit</a>
+            <a href="{{ path('debitOperation', {accountId:account.id}) }}" class="card-link btn btn-dark mt-0">Débit</a>
         </div>
     </div>
 </div>
