--- a/templates/bank/index.html.twig
+++ b/templates/bank/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %} SymfoBank {% endblock %}
 
 {% block body %}
-    <h1 class="text-center mb-3">Vos comptes bancaires</h1>
+    <h1 class="text-center mb-3">Vos comptes bancaires :</h1>
     <div class="container-fluid">
         <div class="row">
             {% for account in accounts %}
